// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        class="styles__1ec5h6m0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
          >
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="styles__17da2jl6"
                  id="_r_2_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_2_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__17da2jl6"
                  id="_r_6_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_6_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        class="styles__1ec5h6m0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          >
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="styles__17da2jl6"
                  id="_r_c_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_c_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__17da2jl6"
                  id="_r_g_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_g_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        aria-describedby="_r_v_"
        class="styles__1ec5h6m0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
          >
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="true"
                data-error="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  checked=""
                  class="styles__17da2jl6"
                  id="_r_11_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_11_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="false"
                data-error="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="styles__17da2jl6"
                  id="_r_15_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_15_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_v_"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        aria-describedby="_r_k_"
        class="styles__1ec5h6m0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
          >
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="styles__17da2jl6"
                  id="_r_m_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_m_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-disabled="false"
                class="styles__17da2jl2"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__17da2jl6"
                  id="_r_q_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__17da2jl9"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  for="_r_q_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_k_"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
